@@ -2,8 +2,9 @@ r128:
 New   : lz4 cli sparse file support
 New   : command -m, to compress multiple files in a single command
 Fixed : Restored lz4hc compression ratio (slightly lower since r124)
-New   : g++ compatibility test
+New   : g++ compatibility tests
 New   : datagen can generate sparse files
+New   : scan-build tests
 Fixed : Fuzzer + frametest compatibility with NetBSD (issue #48)
 Added : Visual project directory
 
